--- a/_sass/partials/_structure.scss
+++ b/_sass/partials/_structure.scss
@@ -32,7 +32,7 @@ img {
 }
 
 .page-content {
-  margin: 0 auto 40px;
+  margin: 0 auto;
   padding: 40px 40px;
 }
 
