--- a/_sass/partials/_type.scss
+++ b/_sass/partials/_type.scss
@@ -10,3 +10,8 @@ h2 {
 p {
   word-wrap: break-word;
 }
+
+a {
+  word-break: break-word;
+  white-space: normal;
+}
